# Deeplearning.ai-Courses

./: .gitignore  LICENSE  README.md  pyproject.toml
LangChain Chat with Your Data/: 01_document_loading.ipynb  02_document_splitting.ipynb  03_vectorstores_and_embeddings.ipynb  04_retrieval.ipynb  05_question_answering.ipynb
