[project]
name = "deeplearning-ai-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "ffmpeg>=1.4",
    "langchain>=1.2.12",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "pypdf>=6.9.1",
    "tiktoken>=0.12.0",
    "yt-dlp>=2026.3.13",
]
